gitops/platform-apps/mailu/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mailu
  labels:
    app.kubernetes.io/name: mailu
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
