gitops/platform-apps/mailu/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mailu
  namespace: mailu
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`mail.__ZONE_NAME__`) && PathPrefix(`/webmail`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: mailu-front
          port: 80
    - kind: Rule
      match: Host(`mail.__ZONE_NAME__`)
      services:
        - kind: Service
          name: mailu-front
          port: 80
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mailu-netbird
  namespace: mailu
spec:
  entryPoints:
    - webnetbird
  routes:
    - kind: Rule
      match: Host(`mail.__ZONE_NAME__`) && PathPrefix(`/webmail`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: mailu-front
          port: 80
    - kind: Rule
      match: Host(`mail.__ZONE_NAME__`)
      services:
        - kind: Service
          name: mailu-front
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mailu-webmail-root
  namespace: mailu
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`__ZONE_NAME__`) && PathPrefix(`/webmail`)
      middlewares:
        - name: authentik-forwardauth
      services:
        - kind: Service
          name: mailu-front
          port: 80
  tls: {}
